# bridge-juno-to-starknet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.preprod.toml  fly.prod.toml  package.json  wallets.toml
.husky/: pre-commit
data/postgresql/: add_migration_queue.sql  init.sql
features/: bridge.feature  save-customer-data.feature
src/: domain.rs  main.rs
src/domain/: bridge.rs  consume_queue.rs  mod.rs  save_customer_data.rs
src/infrastructure/: app.rs  in_memory.rs  juno.rs  logger.rs  mod.rs  postgresql.rs  starknet.rs
tests/: bridge.rs  save_customer_data.rs
