[package]
name = "bridge-juno-to-starknet-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"
actix-web = "4"
reqwest = { version =  "0.11.13", features = ["json", "blocking"] }
thiserror = "1.0.38"
clap = { version = "4.0.30", features = ["derive"] }
async-trait = "0.1.60"
postgres = "0.19.4"
tokio-postgres = "0.7.7"
tokio = "1.23.0"

[dev-dependencies]
cucumber = "0.18"
futures = "0.3"

[[test]]
name = "bridge"
harness = false

[[test]]
name = "save_customer_data"
harness = false
